# qasem

./: .gitignore  .replit  BOT_README.md  PERMISSIONS_GUIDE.md  alqasim_institute.db  apply_default_permissions.py  bot.py  config.py  migrate_attendance_constraint.py  pyproject.toml  replit.md  runner.py  update_attendance_db.py
app/: __init__.py
app/models/: __init__.py  attendance.py  bot_session.py  certificate.py  class_grade.py  contact.py  course.py  enrollment.py  grade.py  lesson.py  news.py  notification.py  payment.py  settings.py  student.py  teacher.py  testimonial.py  user.py
app/routes/: admin.py  auth.py  public.py  student.py  teacher.py
app/static/css/: style.css
app/templates/: base.html
app/templates/admin/: add_attendance.html  add_course.html  add_grade.html  add_installment.html  add_lesson.html  add_news.html  add_payment.html  add_section.html  add_student_grade.html  add_user.html  all_payments.html  attendance_list.html  backup.html  bot.html  confirm_restore.html  contacts.html  courses.html  create_notification.html  dashboard.html  data_reset.html  edit_attendance.html  edit_course.html  edit_grade.html  edit_installment.html  edit_lesson.html  edit_news.html  edit_payment.html  edit_permissions.html  edit_section.html  edit_student.html  edit_student_grade.html  edit_teacher.html  edit_user.html  enroll_student.html  grades.html  lessons.html  manage_permissions.html  (+17 more)
app/utils/: backup.py  decorators.py  excel_export.py  helpers.py  init_db.py  notifications.py  permissions_config.py  scheduler.py  telegram_notifications.py
(+32 files in other folders)
